# ssdp

./: mainapp.cpp  meson.build  ssdp-manager.service  ssdp_manager.hpp
